--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+    padding: 0;
+    color: #484848;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    position:relative;
+    min-height:100vh;
+}
+
 .container{
     max-width: 1000px;
     margin: 30px auto;
