--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,4 +1,4 @@
-section.filters{
+.container .filters{
     background-color:white;
     height:70px;
     width: 100%;
@@ -8,7 +8,7 @@ section.filters{
     align-items: center;
 }
 
-section.filters button{
+.container .filters button{
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
@@ -20,33 +20,29 @@ section.filters button{
     margin-left: auto;
 }
 
-section.filters button:hover{
+.container .filters button:hover{
     opacity: 90%;
 }
 
-section.filters .locations{
+.container .filters .locations,
+.container .filters .amenities{
     height: 100%;
     width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container .filters .locations{
     border-right: 1px solid #DDDDDD;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
-section.filters .amenities{
-    height: 100%;
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-section h3{
+.container h3{
     font-weight: 600;
     margin: 0 30px;
 }
 
-section h4{
+.container h4{
     margin: 0 30px;
     font-weight: 400;
     font-size: 14px;
