--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,10 +3,12 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    display: flex;
-    align-items: center;
+    background-image: url('/images/logo.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-position-x: 20px
 }
 
-header img {
+/* header img {
     margin-left: 20px;
-}
+} */
