--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
     color: #484848;
+    font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    position:relative;
-    min-height:100vh;
 }
