--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -6,7 +6,6 @@ section.filters{
     border-radius: 4px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
 }
 
 section.filters button{
@@ -18,6 +17,7 @@ section.filters button{
     border: none;
     border-radius: 4px;
     margin-right: 30px;
+    margin-left: auto;
 }
 
 section.filters button:hover{
