--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -40,11 +40,11 @@
 
 .container .filters h3{
     font-weight: 600;
-    margin: 0 30px;
+    margin: 0 40px;
 }
 
 .container .filters h4{
-    margin: 0 30px;
+    margin: 0 40px;
     font-weight: 400;
     font-size: 14px;
 }
@@ -60,6 +60,7 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     padding: 25px 0px;
+    z-index:2;
     display:none;
 }
 
