--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -84,7 +84,63 @@
 }
 
 .places .description{
-    height: 150px;
+    /* height: 150px; */
+}
+
+.places .amenities{
+    margin-top: 40px;
+}
+
+.places .amenities h2,
+.places .reviews h2{
+    font-size: 16px;
+    text-align: left;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #DDDDDD
+}
+
+.places .amenities ul,
+.places .reviews ul{
+    list-style: none;
+    padding: 0;
+    margin-top: 5px;
+}
+
+.places .amenities ul li{
+    padding: 1px 0;
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 25px;
+    height: 100%;
+    width: 100%
+    
+}
+
+.places .amenities ul li:first-child{
+    background-image: url("/images/tv.png");
+   
+}
+.places .amenities ul li:nth-child(2){
+    background-image: url("/images/wifi.png");
+}
+
+.places .amenities ul li:last-child{
+    background-image: url("/images/icon_pets.png");
+}
+
+.places .amenities ul p{
+    padding-left: 40px;
+    margin: 10px;
+}
+
+.places .reviews ul h3{
+    margin-bottom: 3px;
+    font-size: 14px;
+    text-align: left;
+}
+
+.places .reviews ul p{
+    margin: 0;
 }
 
 footer{
